--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -86,7 +86,7 @@ html {
   .hero-section {
     position: relative;
     min-height: 100vh;
-    background: url('assets/img/hero/hero-image.jpeg') no-repeat center center/cover;
+    background: url('../../assets/img/hero/hero-image.jpeg') no-repeat center center/cover;
   }
   
   .hero-overlay {
